--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <h1>Hello, World!</h1>
+  <p>Time spent: <span id="count">0</span>sec</p>
+  <img src="img/image.png">
+  <img src="img/largeImg.jpg">
+  <script src="index.js"></script>
 </body>
 </html>
